<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015. J.F.Eick
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<resources>

    <string name="app_name">Anatomie der Stadt</string>

    <string name="GAME_BASE_URL">https://m18.uni-weimar.de/exkursion/</string>


    <string name="hello_world">Placeholder (LEVEL)</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_level">Level</string>
    <string name="title_activity_quiz_multiple_choice">QuizMultipleChoice</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_welcome">Bitte logge Dich mit deiner E-Mail-Adresse und deinem gewählten Passwort ein.</string>
    <string name="register_link">REGISTRIEREN</string>
    <string name="no_account">Du hast noch keinen Zugang?</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="username_or_password_incorrect">Benutzername oder Passwort ist falsch</string>
    <string name="password_empty">Dieses Feld darf nicht leer sein</string>
    <string name="password_too_short">Dieses Passwort ist zu kurz</string>
    <string name="username_empty">Dieses Feld darf nicht leer sein</string>
    <string name="signing_in">Signing in...</string>
    <string name="welcome_message">Willkommen</string>
    <string name="api_domain">m18.uni-weimar.de</string>
    <string name="app_code">2342EXKURSION</string>
    <string name="preference_file_key">de.uni_weimar.m18.anatomiederstadt.levelstate</string>
    <string name="sorry_correct_answer">Sorry, die richtige Antwort lautete</string>
    <string name="sorry_correct_answer_dialog_title">Leider falsch</string>
    <string name="sorry_dismiss">OK</string>
    <string name="wrong_answer_dialog_title">Falsch :(</string>
    <string name="wrong_answer_dismiss">OK</string>
    <string name="congratulations_format_string">Richtig! %d Punkte!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_welcome">Bitte registriere Dich mit deiner Uni-Weimar-Email-Adresse und deinem gewünschten Passwort.</string>
    <string name="register_successfull_title">Willkommen!</string>
    <string name="register_successfull_content">Du hast dich erfolgreich für Anatomie der Stadt registriert. Wir loggen dich jetzt ein.</string>
    <string name="register_successfull_dismiss">OK</string>
    <string name="required_email_suffix">\@uni-weimar.de</string>
    <string name="request_required_email_suffix">Bitte benutze Deine @uni-weimar.de - Email-Adresse</string>
    <string name="show_password">Passwort anzeigen</string>
    <string name="action_logout">Log out</string>
    <string name="lost_password">Passwort vergessen?</string>
    <string name="lost_password_link">PASSWORT ZURÜCKSETZEN</string>
    <string name="title_activity_lost_password">LostPasswordActivity</string>
    <string name="lost_password_title">Passwort zurücksetzen</string>
    <string name="lost_password_text">Bitte gib Deine @uni-weimar.de - E-Mail-Adresse ein, an die wir Dir weitere Instruktionen zum zurücksetzen deines Passwortes schicken können.</string>
    <string name="lost_password_button">Zurücksetzen</string>
    <string name="lost_password_successfull_title">Rettung naht!</string>
    <string name="lost_password_successfull_content">Du solltest innerhalb weniger Minuten eine E-Mail mit einem Link bekommen mit dem Du das Passwort für deinen Zugang zurücksetzen kannst.</string>
    <string name="lost_password_successfull_dismiss">OK</string>
    <string name="user_is_playing_boolean">user_is_playing_boolean</string>
    <string name="resume_base_path">user_is_playing_level</string>
    <string name="resume_page_id">user_is_playing_page_id</string>
    <string name="resume_level_question">Es scheint als würdest Du gerade eine Etappe spielen. Möchtest Du die aktuelle Etappe fortsetzen?</string>
    <string name="resume_level_title">Etappe fortsetzen?</string>
    <string name="resume_positive">Ja!</string>
    <string name="resume_negative">Nicht jetzt!</string>
    <string name="resume_level_intent_bool">resume_level_intent_bool</string>
    <string name="congratulations_exact_format_string">Exakt richtig! %d Punkte!</string>
    <string name="congratulations_not_quite_format_string">Nicht ganz... aber immerhin %d Punkte!</string>
    <string name="congratulations_wrong_format_string">Ähhhm... Nein? %d Punkte.</string>
    <string name="title_activity_survey">SurveyActivity</string>

</resources>
